[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyncua"
version = "1.0.0"
description = "Python client for the NCUA Credit Union Mapping API"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "ruff>=0.4",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: hits the real NCUA API (deselect with '-m not live')",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/pyncua"]
