[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyncua"
version = "1.0.1"
description = "Python client for the NCUA Credit Union Mapping API"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Léon Simmons", email = "Avicennasis@gmail.com"},
]
keywords = ["ncua", "credit-union", "api", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
readme = "README.md"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.5",
]

[project.urls]
Homepage = "https://github.com/Avicennasis/pyncua"
Repository = "https://github.com/Avicennasis/pyncua"
Issues = "https://github.com/Avicennasis/pyncua/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: hits the real NCUA API (deselect with '-m not live')",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/pyncua"]
